# metal-dialect

./: makefile
examples/utility/: Driver.h
include/metal/IR/: MetalOps.td  MetalTypes.td
lib/metal/: CMakeLists.txt
lib/metal/IR/: MetalOps.cpp  MetalTypes.cpp
metal-opt/: metal-opt.cpp
scripts/: mlir2bin-lib.sh
